# src/main/resources/openapi.yml
@@ -1,53 +1,77 @@
 openapi: 3.0.1
 info:
-  title: Book Shop
-  description: Book CRUD API.
-  version: 1.0.0
-servers:
-  - url: /v2
+  title: Inditex Retail Prices Service API
+  description: Inditex Retail Prices Service API
+  version: 1.0.
 paths:
-  /book:
+  /price/{brandId}/{productId}/{date}:
     get:
-      summary: Get Books
-      operationId: getBooks
+      operationId: getPrice
+      summary: Get Price
+      parameters:
+          - in: path
+            name: brandId
+            schema:
+              type: integer
+              format: int64
+            required: true
+            description: Brand ID
+          - in: path
+            name: productId
+            schema:
+              type: integer
+              format: int64
+            required: true
+            description: Product ID
+          - in: path
+            name: date
+            schema:
+              type: string
+              format: date-time
+            required: true
+            description: Application date
+
       responses:
         200:
           description: successful operation
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Book'
-    post:
-      summary: Add a Book
-      operationId: addBook
-      requestBody:
-        description: Book to be added in shop
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Book'
-        required: true
-      responses:
-        200:
-          description: Book Added
-          content:
-            application/json:
-              schema:
-                type: string
-      x-codegen-request-body-name: book
+                $ref: '#/components/schemas/Price'
 components:
   schemas:
-    Book:
+    Price:
       type: object
       properties:
         id:
           type: integer
           format: int64
-        title:
+          description: Price ID
+        brandId:
+          type: integer
+          format: int64
+          description: Brand ID
+          example: 1
+        productId:
+          type: integer
+          format: int64
+          description: Product ID
+          example: 35455
+        startDate:
           type: string
-          example: Oathbringer
-        author:
+          format: date-time
+          description: Start date in which the price list applies
+        endDate:
           type: string
-          example: Brandon Sanderson
+          format: date-time
+          description: End date in which the price list applies
+        currency:
+          type: string
+          enum: [EUR, USD, GBP]
+          description: Price currency ISO 4217 code
+          example: ISO
+        price:
+          type: number
+          format: float
+          description: Price amount in currency abobe. For security reasons, this value will be rounded to the fractional part admitted by the currency
+          example: 17.95
